# advocate-zero

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  apply.py  orchestrator.py
agent/modules/: __init__.py  community.py  content.py  feedback.py  growth.py
agent/tools/: __init__.py  revenuecat.py
proof-of-work/: growth-analysis.md  product-feedback.md  tutorial-agent-subscription-optimizer.md
site/: index.html  letter.html
